# ESP32-LVGL-AI

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions_webserver.csv  sdkconfig  sdkconfig.old
components/ai_chat/: CMakeLists.txt  ai_chat.c  ai_chat.h
components/ap_wifi/: CMakeLists.txt  ap_wifi.c  ap_wifi.h
components/app_control/: CMakeLists.txt  app_control.c  app_control.h
components/fonts/: CMakeLists.txt  font.c
components/img/: CMakeLists.txt  lsm.c
components/lsm6dsv16x/: CMakeLists.txt  lsm6dsv16x.c  lsm6dsv16x.h
components/lv_port/: CMakeLists.txt  lv_port.c  lv_port.h
components/lvgl/: README.md
components/lvgl/env_support/cmake/: esp.cmake
components/lvgl/src/core/: lv_obj_style.h
components/lvgl/src/drivers/libinput/: lv_libinput.c
components/lvgl/src/drivers/x11/: lv_x11_input.c
components/lvgl/src/indev/: lv_indev.c  lv_indev.h  lv_indev_private.h
components/lvgl/src/others/observer/: lv_observer.h
components/lvgl/src/themes/default/: lv_theme_default.c
components/lvgl/src/widgets/animimage/: lv_animimage.h
components/lvgl/src/widgets/button/: lv_button.h
components/lvgl/src/widgets/buttonmatrix/: lv_buttonmatrix.c  lv_buttonmatrix.h
components/lvgl/src/widgets/calendar/: lv_calendar.c  lv_calendar.h  lv_calendar_header_arrow.c
components/lvgl/src/widgets/checkbox/: lv_checkbox.h
components/lvgl/src/widgets/dropdown/: lv_dropdown.c  lv_dropdown.h
components/lvgl/src/widgets/imagebutton/: lv_imagebutton.c  lv_imagebutton.h
components/lvgl/src/widgets/keyboard/: lv_keyboard.h
components/lvgl/src/widgets/label/: lv_label.h
components/lvgl/src/widgets/list/: lv_list.h
components/lvgl/src/widgets/menu/: lv_menu.h
components/my_button/: CMakeLists.txt  my_button.c
components/my_sntp/: CMakeLists.txt  my_sntp.c  my_sntp.h
components/st7735/: CMakeLists.txt  st7735.c  st7735.h
components/ui/: CMakeLists.txt
components/ui/custom/: custom.c  custom.h
components/ui_home/: CMakeLists.txt  ui_home.c  ui_home.h
components/weather/: CMakeLists.txt  weather.c  weather.h
main/: CMakeLists.txt  ai.c  ai.h  button.c  idf_component.yml  main.c  my_custom.c  my_custom.h  weather.c  weather.h
main/ui/custom/: custom.c  custom.h
(+3 files in other folders)
